--- a/imgui.ini
+++ b/imgui.ini
@@ -356,3 +356,15 @@ Size=388,88
 Pos=60,60
 Size=54,58
 
+[Window][タイトル]
+Pos=60,60
+Size=382,87
+
+[Window][ゲーム]
+Pos=60,60
+Size=321,90
+
+[Window][負け]
+Pos=60,60
+Size=318,86
+
