--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -501,6 +501,9 @@
     <ClCompile Include="Project\AllGameScene\GameScene\GameScene.cpp">
       <Filter>Project\GameScene\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Project\StageObject\Ground\Groud.cpp">
+      <Filter>Ellysia\Source File</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shader\Particle3D\Particle3d.PS.hlsl">
@@ -873,6 +876,9 @@
     </ClInclude>
     <ClInclude Include="Project\AllGameScene\GameScene\GameScene.h">
       <Filter>Project\GameScene\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Project\StageObject\Ground\Groud.h">
+      <Filter>Ellysia\Header File</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
