プレイヤーの仮置きをした

--- a/CG2_1.vcxproj
+++ b/CG2_1.vcxproj
@@ -187,6 +187,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\AllGameScene\LoseScene\LoseScene.cpp" />
     <ClCompile Include="Project\AllGameScene\TitleScene\TitleScene.cpp" />
     <ClCompile Include="Project\Collider\CollisionManager.cpp" />
+    <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp" />
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -451,6 +452,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\Collider\Collider.h" />
     <ClInclude Include="Project\Collider\CollisionConfig.h" />
     <ClInclude Include="Project\Collider\CollisionManager.h" />
+    <ClInclude Include="Project\DraftPlayer\DraftPlayer.h" />
     <ClInclude Include="Project\StageObject\Ground\Groud.h" />
   </ItemGroup>
   <ItemGroup>
