--- a/imgui.ini
+++ b/imgui.ini
@@ -360,10 +360,14 @@ Pos=60,60
 Size=382,87
 
 [Window][ゲーム]
-Pos=22,23
+Pos=21,18
 Size=321,98
 
 [Window][負け]
 Pos=60,60
 Size=318,86
+
+[Window][plaInput]
+Pos=355,19
+Size=384,71
 
