--- a/CG2_1.vcxproj
+++ b/CG2_1.vcxproj
@@ -188,6 +188,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\AllGameScene\TitleScene\TitleScene.cpp" />
     <ClCompile Include="Project\Collider\CollisionManager.cpp" />
     <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp" />
+    <ClCompile Include="Project\Enemy\Enemy.cpp" />
+    <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp" />
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -453,6 +455,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\Collider\CollisionConfig.h" />
     <ClInclude Include="Project\Collider\CollisionManager.h" />
     <ClInclude Include="Project\DraftPlayer\DraftPlayer.h" />
+    <ClInclude Include="Project\Enemy\Enemy.h" />
+    <ClInclude Include="Project\Enemy\EnemyAttackCollision.h" />
     <ClInclude Include="Project\StageObject\Ground\Groud.h" />
   </ItemGroup>
   <ItemGroup>
