--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -280,9 +280,6 @@
     <Filter Include="Ellysia\Header File\Manager\LevelEditor">
       <UniqueIdentifier>{edef7b64-1b23-4423-9ff8-a01676a0d1a8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Project\Level1">
-      <UniqueIdentifier>{26351dc1-6df0-4580-8895-e2cb666481a4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Ellysia\Resource File\Line3D">
       <UniqueIdentifier>{10f964f7-878d-4c2f-bd56-002547dadcf5}</UniqueIdentifier>
     </Filter>
@@ -321,6 +318,9 @@
     </Filter>
     <Filter Include="Project\Player\Draft">
       <UniqueIdentifier>{e879e994-db53-4531-8fc4-435ee3269761}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project\Ground">
+      <UniqueIdentifier>{c2200429-df02-42d2-ba0c-43d2e45fcbd9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -504,11 +504,17 @@
     <ClCompile Include="Project\AllGameScene\GameScene\GameScene.cpp">
       <Filter>Project\GameScene\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp">
+      <Filter>Project\Enemy\EnemyAttackCollision</Filter>
+    </ClCompile>
+    <ClCompile Include="Project\Enemy\Enemy.cpp">
+      <Filter>Project\Enemy</Filter>
+    </ClCompile>
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp">
-      <Filter>Ellysia\Source File</Filter>
+      <Filter>Project\Ground</Filter>
     </ClCompile>
     <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp">
-      <Filter>Ellysia\Source File</Filter>
+      <Filter>Project\Player\Draft</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -883,11 +889,17 @@
     <ClInclude Include="Project\AllGameScene\GameScene\GameScene.h">
       <Filter>Project\GameScene\Game</Filter>
     </ClInclude>
+    <ClInclude Include="Project\Enemy\EnemyAttackCollision.h">
+      <Filter>Project\Enemy\EnemyAttackCollision</Filter>
+    </ClInclude>
+    <ClInclude Include="Project\Enemy\Enemy.h">
+      <Filter>Project\Enemy</Filter>
+    </ClInclude>
     <ClInclude Include="Project\StageObject\Ground\Groud.h">
-      <Filter>Ellysia\Header File</Filter>
+      <Filter>Project\Ground</Filter>
     </ClInclude>
     <ClInclude Include="Project\DraftPlayer\DraftPlayer.h">
-      <Filter>Ellysia\Header File</Filter>
+      <Filter>Project\Player\Draft</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
