カメラをプレイヤーに追従処理

--- a/imgui.ini
+++ b/imgui.ini
@@ -363,7 +363,6 @@ Size=382,87
 Pos=21,18
 Size=321,98
 
-
 [Window][負け]
 Pos=60,60
 Size=318,86
@@ -371,4 +370,8 @@ Size=318,86
 [Window][plaInput]
 Pos=355,19
 Size=384,71
+
+[Window][DraftPlayer]
+Pos=60,60
+Size=90,92
 
