2体以上の追跡処理をやる

--- a/imgui.ini
+++ b/imgui.ini
@@ -202,7 +202,7 @@ Pos=48,199
 Size=403,117
 
 [Window][Move]
-Pos=84,135
+Pos=55,269
 Size=256,42
 
 [Window][PreTracking]
@@ -374,4 +374,12 @@ Size=384,71
 [Window][DraftPlayer]
 Pos=367,16
 Size=343,117
+
+[Window][OneEnemy]
+Pos=287,25
+Size=584,148
+
+[Window][EnemyTracking]
+Pos=62,333
+Size=212,92
 
