パーティクルのを出す処理を書いた。 プレイヤーの攻撃処理が完成してから動作を確認する。

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,6 @@
 [Window][Debug##Default]
+Pos=0,0
+Size=82,58
 
 [Window][Plane]
 Pos=60,60
@@ -374,6 +376,8 @@ Pos=367,-8
 Size=343,141
 
 [Window][OneEnemy]
+Pos=0,0
+Size=103,260
 
 [Window][EnemyTracking]
 Pos=62,333
