--- a/CG2_1.vcxproj
+++ b/CG2_1.vcxproj
@@ -189,10 +189,12 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\AllGameScene\TitleScene\TitleScene.cpp" />
     <ClCompile Include="Project\Collider\CollisionManager.cpp" />
     <ClCompile Include="Project\Enemy\EnemyManager.cpp" />
+    <ClCompile Include="Project\Enemy\FeEnemy.cpp" />
+    <ClCompile Include="Project\Enemy\RockEnemyParticle.cpp" />
     <ClCompile Include="Project\Player\Func\PlayerFunc.cpp" />
     <ClCompile Include="Project\Player\Player.cpp" />
     <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp" />
-    <ClCompile Include="Project\Enemy\Enemy.cpp" />
+    <ClCompile Include="Project\Enemy\RockEnemy.cpp" />
     <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp" />
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp" />
   </ItemGroup>
@@ -459,11 +461,15 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\Collider\Collider.h" />
     <ClInclude Include="Project\Collider\CollisionConfig.h" />
     <ClInclude Include="Project\Collider\CollisionManager.h" />
+    <ClInclude Include="Project\Enemy\Enemy.h" />
     <ClInclude Include="Project\Enemy\EnemyManager.h" />
+    <ClInclude Include="Project\Enemy\EnemyParticle.h" />
+    <ClInclude Include="Project\Enemy\FeEnemy.h" />
+    <ClInclude Include="Project\Enemy\RockEnemyParticle.h" />
     <ClInclude Include="Project\Player\Func\PlayerFunc.h" />
     <ClInclude Include="Project\Player\Player.h" />
     <ClInclude Include="Project\DraftPlayer\DraftPlayer.h" />
-    <ClInclude Include="Project\Enemy\Enemy.h" />
+    <ClInclude Include="Project\Enemy\RockEnemy.h" />
     <ClInclude Include="Project\Enemy\EnemyAttackCollision.h" />
     <ClInclude Include="Project\StageObject\Ground\Groud.h" />
   </ItemGroup>
