--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -99,7 +99,7 @@
     <ClCompile Include="Project\Collider\CollisionManager.cpp" />
     <ClCompile Include="Project\Player\Player.cpp" />
     <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp" />
-    <ClCompile Include="Project\Enemy\Enemy.cpp" />
+    <ClCompile Include="Project\Enemy\RockEnemy.cpp" />
     <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp" />
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp" />
     <ClCompile Include="External\TsumiInput\TInput.cpp" />
@@ -286,9 +286,6 @@
     <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp">
       <Filter>Project\Enemy\EnemyAttackCollision</Filter>
     </ClCompile>
-    <ClCompile Include="Project\Enemy\Enemy.cpp">
-      <Filter>Project\Enemy</Filter>
-    </ClCompile>
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp">
       <Filter>Project\Ground</Filter>
     </ClCompile>
@@ -300,6 +297,8 @@
     </ClCompile>
     <ClCompile Include="Project\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Project\Player\Func\PlayerFunc.cpp" />
+    <ClCompile Include="Project\Enemy\FeEnemy.cpp" />
+    <ClCompile Include="Project\Enemy\RockEnemyParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -393,12 +392,16 @@
     <ClInclude Include="Project\Collider\CollisionManager.h" />
     <ClInclude Include="Project\Player\Player.h" />
     <ClInclude Include="Project\DraftPlayer\DraftPlayer.h" />
-    <ClInclude Include="Project\Enemy\Enemy.h" />
+    <ClInclude Include="Project\Enemy\RockEnemy.h" />
     <ClInclude Include="Project\Enemy\EnemyAttackCollision.h" />
     <ClInclude Include="Project\StageObject\Ground\Groud.h" />
     <ClInclude Include="External\TsumiInput\TInput.h" />
     <ClInclude Include="Project\Enemy\EnemyManager.h" />
     <ClInclude Include="Project\Player\Func\PlayerFunc.h" />
+    <ClInclude Include="Project\Enemy\FeEnemy.h" />
+    <ClInclude Include="Project\Enemy\Enemy.h" />
+    <ClInclude Include="Project\Enemy\EnemyParticle.h" />
+    <ClInclude Include="Project\Enemy\RockEnemyParticle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
