--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -299,6 +299,7 @@
     <ClCompile Include="Project\Player\Func\PlayerFunc.cpp" />
     <ClCompile Include="Project\Enemy\FeEnemy.cpp" />
     <ClCompile Include="Project\Enemy\RockEnemyParticle.cpp" />
+    <ClCompile Include="Project\Enemy\FeEnemyParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -402,6 +403,7 @@
     <ClInclude Include="Project\Enemy\Enemy.h" />
     <ClInclude Include="Project\Enemy\EnemyParticle.h" />
     <ClInclude Include="Project\Enemy\RockEnemyParticle.h" />
+    <ClInclude Include="Project\Enemy\FeEnemyParticle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
