--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,6 @@
 [Window][Debug##Default]
+Pos=22,217
+Size=324,250
 
 [Window][Plane]
 Pos=60,60
@@ -374,6 +376,8 @@ Pos=367,-8
 Size=343,141
 
 [Window][OneEnemy]
+Pos=545,5
+Size=461,238
 
 [Window][EnemyTracking]
 Pos=62,333
