--- a/CG2_1.vcxproj
+++ b/CG2_1.vcxproj
@@ -198,6 +198,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\DraftPlayer\DraftPlayer.cpp" />
     <ClCompile Include="Project\Enemy\RockEnemy.cpp" />
     <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp" />
+    <ClCompile Include="Project\Player\PlayerAttack.cpp" />
     <ClCompile Include="Project\StageObject\Ground\Groud.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -475,6 +476,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\DraftPlayer\DraftPlayer.h" />
     <ClInclude Include="Project\Enemy\RockEnemy.h" />
     <ClInclude Include="Project\Enemy\EnemyAttackCollision.h" />
+    <ClInclude Include="Project\Player\PlayerAttack.h" />
     <ClInclude Include="Project\StageObject\Ground\Groud.h" />
   </ItemGroup>
   <ItemGroup>
