岩タイプの敵が外の世界に行っている

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,8 +1,6 @@
 [Window][Debug##Default]
-Pos=54,228
-Size=340,355
-Pos=0,0
-Size=82,58
+Pos=58,-6
+Size=293,658
 
 [Window][Plane]
 Pos=60,60
@@ -32,6 +30,7 @@ Size=720,77
 [Window][Effect]
 Pos=1007,108
 Size=268,136
+Collapsed=1
 
 [Window][GaussianFilter3x3]
 Pos=38,163
@@ -56,6 +55,7 @@ Size=410,184
 [Window][Global Variables]
 Pos=1008,3
 Size=267,101
+Collapsed=1
 
 [Window][Camera]
 Pos=958,225
@@ -200,19 +200,20 @@ Size=431,376
 Collapsed=1
 
 [Window][Attack]
-Pos=985,303
+Pos=553,357
 Size=403,117
 
 [Window][Move]
 Pos=1007,249
 Size=267,48
+Collapsed=1
 
 [Window][PreTracking]
 Pos=471,29
 Size=357,126
 
 [Window][Tracking]
-Pos=944,324
+Pos=498,216
 Size=313,102
 
 [Window][EnemyPosition]
@@ -313,8 +314,9 @@ Pos=60,60
 Size=275,102
 
 [Window][Scene]
-Pos=21,123
+Pos=31,12
 Size=322,88
+Collapsed=1
 
 [Window][PlayerHPUI]
 Pos=60,60
@@ -362,8 +364,9 @@ Pos=60,60
 Size=382,87
 
 [Window][ゲーム]
-Pos=21,18
+Pos=22,50
 Size=321,98
+Collapsed=1
 
 [Window][負け]
 Pos=60,60
@@ -378,10 +381,9 @@ Pos=367,-8
 Size=343,141
 
 [Window][OneEnemy]
-Pos=545,5
-Size=461,238
-Pos=963,265
+Pos=996,303
 Size=482,638
+Collapsed=1
 
 [Window][EnemyTracking]
 Pos=62,333
@@ -403,6 +405,15 @@ Size=499,176
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
 Size=200,100
+
+[Window][岩タイプの敵]
+Pos=901,363
+Size=494,596
+Collapsed=1
+
+[Window][PlayerOnCollision]
+Pos=450,70
+Size=389,99
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
