当たらない事件

--- a/imgui.ini
+++ b/imgui.ini
@@ -407,13 +407,16 @@ IsChild=1
 Size=200,100
 
 [Window][岩タイプの敵]
-Pos=901,363
+Pos=719,255
 Size=494,596
-Collapsed=1
 
 [Window][PlayerOnCollision]
 Pos=450,70
 Size=389,99
+
+[Window][PlayerAttck]
+Pos=404,101
+Size=341,96
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
