パーティクル重いね

--- a/imgui.ini
+++ b/imgui.ini
@@ -418,6 +418,14 @@ Size=389,99
 Pos=404,101
 Size=341,96
 
+[Window][PlayerAttackOnCollision]
+Pos=60,60
+Size=32,40
+
+[Window][RockEnemyOnCollision]
+Pos=60,60
+Size=400,300
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
