どちらの敵もパーティクルを出せるようになった

--- a/imgui.ini
+++ b/imgui.ini
@@ -426,6 +426,10 @@ Size=32,40
 Pos=60,60
 Size=400,300
 
+[Window][FeEnemyOnCollision]
+Pos=60,60
+Size=32,40
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
