--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -299,7 +299,7 @@
     <ClCompile Include="Project\Enemy\RockEnemyParticle.cpp" />
     <ClCompile Include="Project\Enemy\FeEnemyParticle.cpp" />
     <ClCompile Include="Project\Player\PlayerAttack.cpp" />
-    <ClCompile Include="Record.cpp" />
+    <ClCompile Include="Project\Record\Record.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -406,7 +406,7 @@
     <ClInclude Include="Project\Enemy\RockEnemyParticle.h" />
     <ClInclude Include="Project\Enemy\FeEnemyParticle.h" />
     <ClInclude Include="Project\Player\PlayerAttack.h" />
-    <ClInclude Include="Record.h" />
+    <ClInclude Include="Project\Record\Record.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
