--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=62,-3
+Pos=40,307
 Size=293,658
 
 [Window][Plane]
@@ -314,7 +314,7 @@ Pos=60,60
 Size=275,102
 
 [Window][Scene]
-Pos=31,12
+Pos=53,214
 Size=322,88
 Collapsed=1
 
@@ -431,8 +431,16 @@ Pos=60,60
 Size=32,40
 
 [Window][Score]
-Pos=60,60
+Pos=57,145
 Size=538,207
+
+[Window][スコア]
+Pos=354,176
+Size=295,237
+
+[Window][記録(デバッグ用)]
+Pos=49,109
+Size=315,176
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
