--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -302,6 +302,7 @@
     <ClCompile Include="Project\Player\PlayerAttack.cpp" />
     <ClCompile Include="Project\Record\Record.cpp" />
     <ClCompile Include="Project\Record\GameScoreUI\GameScoreUI.cpp" />
+    <ClCompile Include="Project\TextureLoader\TextureLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -411,6 +412,7 @@
     <ClInclude Include="Project\Player\PlayerAttack.h" />
     <ClInclude Include="Project\Record\Record.h" />
     <ClInclude Include="Project\Record\GameScoreUI\GameScoreUI.h" />
+    <ClInclude Include="Project\TextureLoader\TextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
