--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -301,7 +301,7 @@
     <ClCompile Include="Project\Player\Effects\StompSpeed\StompSpeed.cpp" />
     <ClCompile Include="Project\Player\PlayerAttack.cpp" />
     <ClCompile Include="Project\Record\Record.cpp" />
-    <ClCompile Include="Project\Record\GameScoreUI\GameScoreUI.cpp" />
+    <ClCompile Include="Project\UI\GameUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -410,7 +410,7 @@
     <ClInclude Include="Project\Player\Effects\StompSpeed\StompSpeed.h" />
     <ClInclude Include="Project\Player\PlayerAttack.h" />
     <ClInclude Include="Project\Record\Record.h" />
-    <ClInclude Include="Project\Record\GameScoreUI\GameScoreUI.h" />
+    <ClInclude Include="Project\UI\GameUI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
