--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][Debug##Default]
+Pos=58,127
 Size=293,658
 
 [Window][Plane]
@@ -199,8 +200,6 @@ Size=431,376
 Collapsed=1
 
 [Window][Attack]
-Pos=1009,617
-Size=241,32
 Pos=553,357
 Size=403,117
 
@@ -214,7 +213,6 @@ Pos=471,29
 Size=357,126
 
 [Window][Tracking]
-Pos=941,410
 Pos=498,216
 Size=313,102
 
@@ -383,8 +381,6 @@ Pos=367,-8
 Size=343,141
 
 [Window][OneEnemy]
-Pos=1009,304
-Size=267,308
 Pos=996,303
 Size=482,638
 Collapsed=1
@@ -411,8 +407,9 @@ IsChild=1
 Size=200,100
 
 [Window][岩タイプの敵]
-Pos=719,255
+Pos=926,471
 Size=494,596
+Collapsed=1
 
 [Window][PlayerOnCollision]
 Pos=450,70
@@ -443,8 +440,13 @@ Pos=354,176
 Size=295,237
 
 [Window][記録(デバッグ用)]
-Pos=49,109
+Pos=19,131
 Size=315,176
+Collapsed=1
+
+[Window][ゲームUI]
+Pos=60,60
+Size=90,136
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
