--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][Debug##Default]
+Pos=0,0
 Size=293,658
 
 [Window][Plane]
@@ -406,6 +407,8 @@ IsChild=1
 Size=200,100
 
 [Window][岩タイプの敵]
+Pos=0,0
+Size=139,596
 
 [Window][PlayerOnCollision]
 Pos=450,70
