結果シーンの数字が増えるシステムを作った

--- a/imgui.ini
+++ b/imgui.ini
@@ -445,7 +445,11 @@ Collapsed=1
 
 [Window][ゲームUI]
 Pos=60,60
-Size=90,136
+Size=498,136
+
+[Window][結果]
+Pos=40,452
+Size=430,153
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
