--- a/imgui.ini
+++ b/imgui.ini
@@ -430,6 +430,10 @@ Size=400,300
 Pos=60,60
 Size=32,40
 
+[Window][結果]
+Pos=60,60
+Size=139,78
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
