--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -300,13 +300,13 @@
     <ClCompile Include="Project\Enemy\FeEnemyParticle.cpp" />
     <ClCompile Include="Project\Player\Effects\StompSpeed\StompSpeed.cpp" />
     <ClCompile Include="Project\Player\PlayerAttack.cpp" />
-    <ClCompile Include="Record.cpp" />
     <ClCompile Include="Project\Player\Effects\CrackEffect\CrackEffect.cpp" />
     <ClCompile Include="Project\Player\Timer\pTimer.cpp" />
     <ClCompile Include="Project\Ease\Ease.cpp" />
     <ClCompile Include="Project\Record\Record.cpp" />
     <ClCompile Include="Project\UI\GameUI.cpp" />
     <ClCompile Include="Project\TextureLoader\TextureLoader.cpp" />
+    <ClCompile Include="Project\StageObject\Skydome\Skydome.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -414,7 +414,6 @@
     <ClInclude Include="Project\Enemy\FeEnemyParticle.h" />
     <ClInclude Include="Project\Player\Effects\StompSpeed\StompSpeed.h" />
     <ClInclude Include="Project\Player\PlayerAttack.h" />
-    <ClInclude Include="Record.h" />
     <ClInclude Include="Project\Player\Effects\CrackEffect\CrackEffect.h" />
     <ClInclude Include="Project\Player\Timer\pTimer.h" />
     <ClInclude Include="Project\Ease\Ease.h" />
@@ -422,6 +421,7 @@
     <ClInclude Include="Project\UI\GameUI.h" />
     <ClInclude Include="Project\Record\GameScoreUI\GameScoreUI.h" />
     <ClInclude Include="Project\TextureLoader\TextureLoader.h" />
+    <ClInclude Include="Project\StageObject\Skydome\Skydome.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
