--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -307,6 +307,8 @@
     <ClCompile Include="Project\UI\GameUI.cpp" />
     <ClCompile Include="Project\TextureLoader\TextureLoader.cpp" />
     <ClCompile Include="Project\StageObject\Skydome\Skydome.cpp" />
+    <ClCompile Include="Project\Player\Part\Head\PlayerHead.cpp" />
+    <ClCompile Include="Project\Player\Part\Torso\PlayerTorso.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -422,6 +424,9 @@
     <ClInclude Include="Project\Record\GameScoreUI\GameScoreUI.h" />
     <ClInclude Include="Project\TextureLoader\TextureLoader.h" />
     <ClInclude Include="Project\StageObject\Skydome\Skydome.h" />
+    <ClInclude Include="Project\Player\Part\IPlayerParts.h" />
+    <ClInclude Include="Project\Player\Part\Head\PlayerHead.h" />
+    <ClInclude Include="Project\Player\Part\Torso\PlayerTorso.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
