Titleに音を付けた

--- a/imgui.ini
+++ b/imgui.ini
@@ -448,6 +448,10 @@ Collapsed=1
 Pos=40,452
 Size=430,153
 
+[Window][SS]
+Pos=60,60
+Size=49,64
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
