--- a/CG2_1.vcxproj.filters
+++ b/CG2_1.vcxproj.filters
@@ -308,6 +308,9 @@
     <ClCompile Include="Project\StageObject\Skydome\Skydome.cpp" />
     <ClCompile Include="Project\Player\Parts\Head\PlayerHead.cpp" />
     <ClCompile Include="Project\Player\Parts\Torso\PlayerTorso.cpp" />
+    <ClCompile Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioScene.cpp" />
+    <ClCompile Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioManager.cpp" />
+    <ClCompile Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioSceneFinish.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ellysia\AdjustmentItems\AdjustmentItems.h" />
@@ -425,6 +428,10 @@
     <ClInclude Include="Project\Player\Parts\IPlayerParts.h" />
     <ClInclude Include="Project\Player\Parts\Head\PlayerHead.h" />
     <ClInclude Include="Project\Player\Parts\Torso\PlayerTorso.h" />
+    <ClInclude Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioScene.h" />
+    <ClInclude Include="Project\AllGameScene\GameScene\GameAudioScene\IGameAudioScene.h" />
+    <ClInclude Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioManager.h" />
+    <ClInclude Include="Project\AllGameScene\GameScene\GameAudioScene\GameAudioSceneFinish.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
