--- a/CG2_1.vcxproj
+++ b/CG2_1.vcxproj
@@ -203,6 +203,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\Enemy\RockEnemy.cpp" />
     <ClCompile Include="Project\Enemy\EnemyAttackCollision.cpp" />
     <ClCompile Include="Project\Player\PlayerAttack.cpp" />
+    <ClCompile Include="Project\Player\SE\PlayerSE.cpp" />
     <ClCompile Include="Project\StageObject\Skydome\Skydome.cpp" />
     <ClCompile Include="Project\UI\GameUI.cpp" />
     <ClCompile Include="Project\Player\Timer\pTimer.cpp" />
@@ -491,6 +492,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\Enemy\RockEnemy.h" />
     <ClInclude Include="Project\Enemy\EnemyAttackCollision.h" />
     <ClInclude Include="Project\Player\PlayerAttack.h" />
+    <ClInclude Include="Project\Player\SE\PlayerSE.h" />
     <ClInclude Include="Project\StageObject\Skydome\Skydome.h" />
     <ClInclude Include="Project\UI\GameUI.h" />
     <ClInclude Include="Project\Player\Timer\pTimer.h" />
